# coffee_assitant_see_speak

./: .gitignore  CLAUDE.md  README.md  aiUnderstandPrompt.py  assistant_info.sql  cpu_optimizer.py  emotiondet.py  fetchDataFromAPI.py  imag.py  insightfacePyWith.py  listener.py  main.py  pyproject.toml  run.bat  simple_ws_client.py  speak.py  task_monitor.py  tstCossyv2.py  websocket_client_example.html  websocket_client_example.py  websocket_client_test.py  websocket_server.py  websocket_test_simple.py
productInfoAPI/: data.json  main.py
utils/: RealtimeMp3Player.py  chat.py
