[project]
name = "coffev4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "dashscope>=1.23.5",
    "dotenv>=0.9.9",
    "insightface>=0.7.3",
    "onnxruntime>=1.22.0",
    "openai>=1.93.0",
    "opencv-python>=4.11.0.86",
    "psutil>=6.1.0",
    "pyaudio>=0.2.14",
    "requests>=2.32.4",
    "websockets>=15.0.1",
]


[tool.uv]
cache-dir = "./.uv_cache"
